@@ -30,11 +30,11 @@ COMPRESS_BINARY()
 
 
 # building the python module for lua:
-SET(PLUG_NAME "python27")
+SET(PLUG_NAME "python")
 SET(TARGET_NAME "plug_${PLUG_NAME}")
 SET(TARGET_DIR "./modules")
 
-ADD_LIBRARY(${TARGET_NAME} MODULE $<TARGET_OBJECTS:src>)
+ADD_LIBRARY(${TARGET_NAME} MODULE $<TARGET_OBJECTS:src> src/python.def)
 SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES 
   OUTPUT_NAME "${PLUG_NAME}"
   PREFIX ""
